fixed input field on mobile

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ input {
     border-radius: 3px;
     border: 1px solid #ccc;
     transition: all 0.3s ease;
+    width: 80%;
 }
 
 
